added assets library

--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,31 @@
 {
   "version": 1,
   "projects": {
+    "shared-assets": {
+      "projectType": "library",
+      "root": "libs/shared/assets",
+      "sourceRoot": "libs/shared/assets/src",
+      "prefix": "workspace",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/shared/assets"],
+          "options": {
+            "jestConfig": "libs/shared/assets/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/shared/assets/src/**/*.ts",
+              "libs/shared/assets/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
     "tiny-app": {
       "projectType": "application",
       "root": "apps/tiny-app",
