--- a/nx.json
+++ b/nx.json
@@ -19,6 +19,9 @@
     }
   },
   "projects": {
+    "shared-assets": {
+      "tags": ["scope:shared", "type:assets"]
+    },
     "tiny-app": {
       "tags": []
     },
