--- a/nx.json
+++ b/nx.json
@@ -22,6 +22,9 @@
     "shared-assets": {
       "tags": ["scope:shared", "type:assets"]
     },
+    "shared-styles": {
+      "tags": ["scope:shared", "type:styles"]
+    },
     "tiny-app": {
       "tags": []
     },
