A separate workspace library for environments config

--- a/nx.json
+++ b/nx.json
@@ -22,6 +22,9 @@
     "shared-assets": {
       "tags": ["scope:shared", "type:assets"]
     },
+    "shared-environments": {
+      "tags": ["scope:shared", "type:environments"]
+    },
     "shared-styles": {
       "tags": ["scope:shared", "type:styles"]
     },
