--- a/angular.json
+++ b/angular.json
@@ -8,6 +8,31 @@
       "prefix": "workspace",
       "architect": {}
     },
+    "shared-environments": {
+      "projectType": "library",
+      "root": "libs/shared/environments",
+      "sourceRoot": "libs/shared/environments/src",
+      "prefix": "workspace",
+      "architect": {
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/shared/environments"],
+          "options": {
+            "jestConfig": "libs/shared/environments/jest.config.js",
+            "passWithNoTests": true
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/shared/environments/src/**/*.ts",
+              "libs/shared/environments/src/**/*.html"
+            ]
+          }
+        }
+      }
+    },
     "shared-styles": {
       "projectType": "library",
       "root": "libs/shared/styles",
@@ -62,8 +87,8 @@
               ],
               "fileReplacements": [
                 {
-                  "replace": "apps/tiny-app/src/environments/environment.ts",
-                  "with": "apps/tiny-app/src/environments/environment.prod.ts"
+                  "replace": "libs/shared/environments/src/lib/environment.ts",
+                  "with": "libs/shared/environments/src/lib/environment.prod.ts"
                 }
               ],
               "outputHashing": "all"
