--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@angular/platform-browser": "^12.0.0",
     "@angular/platform-browser-dynamic": "^12.0.0",
     "@angular/router": "^12.0.0",
+    "@ngrx/store": "^12.1.0",
+    "@ngrx/store-devtools": "^12.1.0",
     "@nrwl/angular": "12.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -66,6 +68,7 @@
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-ngrx": "^1.0.0",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.3",
     "prettier": "2.2.1",
