core injector extracted into data-access library

--- a/nx.json
+++ b/nx.json
@@ -22,6 +22,9 @@
     "shared-assets": {
       "tags": ["scope:shared", "type:assets"]
     },
+    "shared-data-access": {
+      "tags": ["scope:shared", "type:data-access"]
+    },
     "shared-environments": {
       "tags": ["scope:shared", "type:environments"]
     },
