--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@workspace/shared/assets": ["libs/shared/assets/src/index.ts"],
+      "@workspace/shared/data-access": ["libs/shared/data-access/src/index.ts"],
       "@workspace/shared/environments": [
         "libs/shared/environments/src/index.ts"
       ],
