added implicit dependency to tiny-app project

--- a/nx.json
+++ b/nx.json
@@ -32,6 +32,7 @@
       "tags": ["scope:shared", "type:styles"]
     },
     "tiny-app": {
+      "implicitDependencies": ["shared-assets", "shared-styles"],
       "tags": []
     },
     "tiny-app-e2e": {
